Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1051

removing file failed due to no space left on device

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.2.0
    • Lustre 2.2.0
    • None
    • 3
    • 4717

      Hi,

      I'm testing 2.1.55 and just created small MDT (500MB) and 28 OSTs (16TB per OST) on it.
      After the format is completed, the client mounted the filesystem, then wrote an file and tried to remove it, but the removing was failed due to "no space left on device".

      Here is what I did on the client.

      1. touch /mnt/a
      2. rm /mnt/a
        rm: remove regular empty file `/mnt/a'? y
        rm: cannot remove `/mnt/a': No space left on device

      we can't see any error messages on the client's log file, but there are some error messages on the MDS below.

      Jan 29 16:17:35 dl01 kernel: Lustre: 30022:0:(ldlm_lib.c:909:target_handle_connect()) MGS: connection from e388fe06-b86b-228b-ea1c-0834ea5009ae@192.168.20.126@tcp t0 exp (null) cur 1327871855 last 0
      Jan 29 16:17:46 dl01 kernel: Lustre: 30042:0:(osd_handler.c:786:osd_trans_start()) (null): too many transaction credits (3296 > 256)
      Jan 29 16:17:46 dl01 kernel: LustreError: 30042:0:(osd_handler.c:790:osd_trans_start()) attr_set: 2, punch: 0, xattr_set: 1,
      Jan 29 16:17:46 dl01 kernel: LustreError: 30042:0:(osd_handler.c:793:osd_trans_start()) create: 28, ref_add: 1, ref_del: 3, write: 113
      Jan 29 16:17:46 dl01 kernel: LustreError: 30042:0:(osd_handler.c:795:osd_trans_start()) insert: 85, delete: 2
      Jan 29 16:17:46 dl01 kernel: JBD: mdt_01 wants too many credits (3296 > 256)

      If we have make the more bigger MDT, creating and removing were no problem. Any minimum MDT size limitation changes in 2.x?

            niu Niu Yawei (Inactive)
            ihara Shuichi Ihara (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: