LU-1051 improve credits calculation

- Reserve credits for quota according to affected uid/gids

  Instead of reserving constant LDISKFS_QUOTA_INIT_BLOCKS for all
  kinds of transactions, this patch tracks how many/which uid/gids
  are affected in each declare function, then calculates the total
  quota credits according to the affected uid/gids in
  osd_trans_start();

- Reduce credits for unlink llog

  1. Reserve less credits for catalog header udpate, since the
     catalog header is already allocated;
  2. Don't reserve credits the '.' & '..' insertion for file creation;
  3. Don't reserve credits for oi insertion;

- Limit the credits to j_max_transaction_buffers in osd_trans_start();

Signed-off-by: Niu Yawei <niu@whamcloud.com>
Change-Id: Ifbcc26b670c4965f22cc96ae7db16154927f32a4